Enhance file handling safety, add File Explorer skill, and fix skill indexing bugs
- Improved UPLOAD logic in monitor.py with path validation (file vs directory) and deep output scanning
- Added text truncation (5000 chars) to prevent bridge/WhatsApp crashes from large outputs
- Added File Explorer skill for better semantic targeting of filesystem tasks
- Fixed SkillIndexer bug where metadata leaked between skills
- Hardened AI rules to prevent recursive directory uploads and handle specific filenames better
- Updated .gitignore for brain caches and local env files

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,10 @@ satele_memory/
 brain/satele_memory/
 satele_cfg.env
 brain/.env
+brain/satele_brain.env
+brain/.skill_index*
+brain/.cache/
+brain/monitor.py.bak
+config_test.env
 
 *.zip
