--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,13 @@ services:
 
     # 🌍 Environment Variables
     environment:
-      - REMOTE_BRIDGE_URL=http://localhost:8000
-      - BRIDGE_SECRET_KEY=default-secret-key
-      - BOT_TRIGGER=satele
-      # 🧠 AI Config
-      - AI_PROVIDER=ollama
-      - OLLAMA_MODEL=gemma3:4b
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      # 🐳 Host Connectivity
+      # OLLAMA_HOST is required for container->host networking
       - OLLAMA_HOST=http://host.docker.internal:11434
 
     # 📂 Volumes
     volumes:
+      # Main Config
+      - ./satele.config:/app/satele.config
       # Config Persistance
       - ./satele_cfg.env:/app/satele_cfg.env
       # WhatsApp Session Persistance
@@ -31,7 +26,7 @@ services:
       # 🚨 Host Access (Update this to your user folder!)
       # On Mac: /Users/dcaric -> /host_home
       # On Windows: C:/Users/YourName -> /host_home
-      - ${HOME}:/host_home
+      - ${HOME:-C:/Users/Dario}:/host_home
 
     # 🌐 Networking (Allow access to Ollama/API on host)
     extra_hosts:
