--- a/satele.config.example
+++ b/satele.config.example
@@ -2,3 +2,5 @@ GOOGLE_API_KEY=your_gemini_api_key_here
 REMOTE_BRIDGE_URL=http://localhost:8000
 BRIDGE_SECRET_KEY=default-secret-key
 BOT_TRIGGER=satele
+GEMINI_PRICE_IN=0.10
+GEMINI_PRICE_OUT=0.40
